[gd_scene load_steps=15 format=3 uid="uid://r5g55u0uynu7"]

[ext_resource type="Script" path="res://main.gd" id="1_0s1wp"]
[ext_resource type="PackedScene" uid="uid://blhop6xxf4e7f" path="res://world/world.tscn" id="3_r0gao"]
[ext_resource type="AudioStream" uid="uid://dugsnle77datg" path="res://audio/Note 1.wav" id="4_rggwj"]
[ext_resource type="AudioStream" uid="uid://bbijawj105x8k" path="res://audio/Note 2.wav" id="5_8pe3k"]
[ext_resource type="PackedScene" uid="uid://dsgpqwdascowj" path="res://gui/gui.tscn" id="5_l1k28"]
[ext_resource type="AudioStream" uid="uid://wus662267bmm" path="res://audio/Note 3.wav" id="6_c31qc"]
[ext_resource type="AudioStream" uid="uid://cjigcr0jdwdl0" path="res://audio/gtr loop.wav" id="6_hq6uy"]
[ext_resource type="AudioStream" uid="uid://bg7wcoryxutdg" path="res://audio/Chicken.wav" id="8_4kv5e"]
[ext_resource type="AudioStream" uid="uid://bg32nya04yoti" path="res://audio/ChickenAngry-001.wav" id="8_12tl8"]
[ext_resource type="AudioStream" uid="uid://qsfr134a2153" path="res://audio/ChickenAngry-002.wav" id="9_5xk33"]
[ext_resource type="AudioStream" uid="uid://bdgiwvnimmg2m" path="res://audio/woosh 2.wav" id="9_v4jiq"]
[ext_resource type="AudioStream" uid="uid://dga1eyleunr2u" path="res://audio/ChickenAngry-003.wav" id="10_mboeo"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kpkug"]
playback_mode = 2
streams_count = 3
stream_0/stream = ExtResource("4_rggwj")
stream_1/stream = ExtResource("5_8pe3k")
stream_2/stream = ExtResource("6_c31qc")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6ef6x"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("8_12tl8")
stream_1/stream = ExtResource("9_5xk33")
stream_2/stream = ExtResource("10_mboeo")

[node name="Main" type="Node" node_paths=PackedStringArray("world", "gui", "start_timer")]
script = ExtResource("1_0s1wp")
world = NodePath("World")
gui = NodePath("GUI")
start_timer = NodePath("StartTimer")

[node name="World" parent="." instance=ExtResource("3_r0gao")]

[node name="GUI" parent="." instance=ExtResource("5_l1k28")]

[node name="StartTimer" type="Timer" parent="."]

[node name="musicOneShots" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_kpkug")
volume_db = 2.971
max_polyphony = 3
playback_type = 2

[node name="musicLoop" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_hq6uy")

[node name="sfxChickensAngry" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_6ef6x")

[node name="sfxWoosh" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_v4jiq")
volume_db = 5.448

[node name="sfxChickensFollow" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_4kv5e")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
